--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,18 @@
 @import "tailwindcss";
 
+body {
+  min-height: 100vh;
+}
+#root {
+  min-height: 100vh;
+}
+html,
+body,
+#root,
+#root > div {
+  height: 100%;
+}
+
 /* Base styles using @layer base to override default styles */
 /* @layer base {
   label {
